[gd_scene load_steps=9 format=3 uid="uid://dl0m5fa0feqgj"]

[ext_resource type="Script" path="res://ui/tabs/tab_properties/container/property_container.gd" id="1_66jka"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_it1cx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jbp2u"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.192226, 0.18143, 0.174232, 1)
border_width_top = 8
border_width_bottom = 8
border_color = Color(0.131806, 0.124707, 0.117605, 1)
border_blend = true
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50f8k"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.262951, 0.249296, 0.240194, 1)
border_width_top = 8
border_width_bottom = 8
border_color = Color(0.348632, 0.33416, 0.319691, 1)
border_blend = true
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sb8yg"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.132458, 0.124337, 0.118344, 1)
border_width_top = 8
border_width_bottom = 8
border_color = Color(0.0690075, 0.0638102, 0.0586124, 1)
border_blend = true
corner_detail = 1

[sub_resource type="Image" id="Image_4c0bp"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 180, 180, 180, 81, 177, 177, 177, 88, 179, 179, 179, 10, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 177, 177, 177, 88, 178, 178, 178, 115, 177, 177, 177, 95, 179, 179, 179, 10, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 179, 179, 179, 10, 177, 177, 177, 95, 178, 178, 178, 115, 177, 177, 177, 95, 179, 179, 179, 10, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 179, 179, 179, 10, 177, 177, 177, 105, 178, 178, 178, 115, 177, 177, 177, 88, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 179, 179, 179, 10, 177, 177, 177, 105, 178, 178, 178, 115, 177, 177, 177, 88, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 179, 179, 179, 10, 177, 177, 177, 95, 178, 178, 178, 115, 177, 177, 177, 95, 199, 199, 199, 9, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 177, 177, 177, 88, 178, 178, 178, 115, 177, 177, 177, 95, 199, 199, 199, 9, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 179, 179, 179, 80, 177, 177, 177, 88, 199, 199, 199, 9, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_wc4c3"]
image = SubResource("Image_4c0bp")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_n5p3o"]
color = Color(0.105882, 0.113725, 0.121569, 1)
grow_begin = 0.0
grow_end = 0.0
thickness = 2
vertical = true

[node name="PropertyContainer" type="VBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
theme_override_constants/separation = 1
script = ExtResource("1_66jka")

[node name="CollapseButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "properties_container"
theme_override_colors/font_pressed_color = Color(0.737255, 0.745098, 0.760784, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_it1cx")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_jbp2u")
theme_override_styles/hover = SubResource("StyleBoxFlat_50f8k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sb8yg")
theme_override_styles/normal = SubResource("StyleBoxFlat_sb8yg")
toggle_mode = true
button_pressed = true
text = "Property Container"
icon = SubResource("ImageTexture_wc4c3")
alignment = 0

[node name="M" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 2

[node name="Background" type="Panel" parent="M"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxLine_n5p3o")

[node name="PropertyFields" type="VBoxContainer" parent="M"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
